# Nya

./: .clang-format  .gitignore  CMakeLists.txt  README.md
docs/: Language Syntax Standard.md
src/: ast.h  error.cpp  error.h  lexer.c  lexer.cpp  lexer.h  main.c  main.cpp  type.h
src/cli/: cli.cpp  cli.h
src/tool/: result.c  result.h
